# Ini-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cspell.json
.github/workflows/: .github.yml  cifuzz.github.yml  codeql.github.yml
include/: settings.h
test/: ini_settings_test.cc  ini_util_func_test.cc
